# octet-attest-verify

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md  SECURITY.md  octet-attest-verify.example.toml
spec/: attestation-verification.md
src/: appattest.rs  config.rs  error.rs  keyattest.rs  lib.rs  playintegrity.rs  root.rs
test-vectors/appattest/: README.md  extract_vector.py
tests/: appattest_vectors.rs
